<?xml version="1.0" encoding="utf-8"?>
<!-- Android Strings File -->
<!-- Generated by Twine 0.4.0 -->
<!-- Language: en -->
<resources>
	<!-- SECTION: YopMeStrings -->
	<string name="app_name">MapsWithMe</string>
	<string name="error_map_is_absent">Map for this area is not downloaded. Please download it in MapsWithMe on the main screen.</string>
	<string name="location_label">Your location will be displayed in the middle of the screen</string>
	<string name="location_oriented">Map with your location</string>
	<string name="location_update_frequency">Frequency of update</string>
	<string name="menu_help">Help</string>
	<string name="menu_settings">Settings</string>
	<string name="poi_label">The place you selected will be displayed in the middle of the screen</string>
	<string name="poi_oriented">Map of selected location</string>
	<string name="pref_update_title">Map update</string>
	<string name="title_activity_reference">MapsWithMe Back Screen</string>
	<string name="toast_poi">Now this place is displayed on the second screen</string>
	<string name="toast_your_location">Now your location is displayed on the second screen</string>
	<string name="wait_msg">Determining Location …</string>
	<string name="about">MapsWithMe offers offline maps of all the cities, all countries of the world for mobile devices with a second display. Travel with full confidence: wherever you are, MapsWithMe addresses all your offline mapping needs. You will feel more confident on your trips also because the map on the Back screen uses your phone\'s battery charge sparingly.\n We are always working on new features and would love to hear from you on how you think we could improve MapsWithMe. If you have any problems with the app, don\'t hesitate to contact us at support@mapswithme.com. We respond to every request!\n Like MapsWithMe and want to support us? There are some simple and absolutely free ways:\n - leave a review at your App Market\n - like our Facebook page http://www.facebook.com/mapswithme\n - or just tell about MapsWithMe to your mom, friends and colleagues :) \nThank you for being with us. We appreciate your support very much!</string>
	<string name="about_title">About</string>
	<string name="zoom_in">Zoom in</string>
	<string name="zoom_out">Zoom out</string>
	<string name="seconds_5">5 seconds</string>
	<string name="seconds_15">15 seconds</string>
	<string name="seconds_30">30 seconds</string>
	<string name="seconds_60">60 seconds</string>
	<string name="by_click">On touch only</string>
	<string name="gestures">Back screen gestures</string>
	<string name="info_update">Info update</string>
	<string name="category_application">Application</string>
	<string name="save_your_battery">In order to optimize battery usage, we recommend that you choose the lowest frequency of update.</string>
	<string name="show_my_location">Show my location</string>
</resources>
