<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="42dp"
    android:paddingRight="42dp" >

    <TextView
        style="@style/HelpBigText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestures" >
    </TextView>

    <TextView
        style="@style/HelpSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zoom_in" >
    </TextView>

    <TextView
        style="@style/HelpSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_swiperight"
        android:text="@string/zoom_out" >
    </TextView>

    <TextView
        style="@style/HelpSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_tap"
        android:text="@string/info_update" >
    </TextView>

    <TextView
        style="@style/HelpSmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_swipeleftright"
        android:text="@string/show_my_location"
        android:textSize="20dp" >
    </TextView>

</LinearLayout>